# zapret-discord-youtube-rust

./: .gitignore  Cargo.toml  README.md  build.rs  fix_ui_deps.py  inject_clear_error.py  refactor_errors.py  remove_error_prefix.py  reorder_main_menu.py  update_i18n.py  update_i18n_errors.py  update_i18n_final.py  update_i18n_locales.py  update_i18n_main.py  update_i18n_misc.py  update_i18n_service.py  update_i18n_state.py
.cargo/: config.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
locales/: en.yml  ru.yml
src/: autotune.rs  config.rs  defender.rs  download.rs  ipset.rs  main.rs  runner.rs  strategy.rs  utils.rs
src/autotune/: mod.rs  presets.rs
src/firewalls/: iptables.rs  mod.rs  nftables.rs  windivert.rs
src/firewalls/backends/: _backends.rs  iptables.rs  mod.rs  nftables.rs
src/inits/: dinit.rs  init.rs  init_structure.md  mod.rs  openrc.rs  runit.rs  s6.rs  systemd.rs  winservice.rs
src/platform/: admin.rs  linux.rs  mod.rs  windows.rs
src/strategy/: discovery.rs  parser.rs
src/tui/: mod.rs  state.rs  theme.rs  ui.rs
src/tui/menus/: autotune_menu.rs  defender_menu.rs  download_menu.rs  download_submenu.rs  gamefilter_menu.rs  lists_menu.rs  main_menu.rs  mod.rs  service_menu.rs  strategy_menu.rs  tag_menu.rs
